2008-03-30  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Oliver Hunt.
        
        Build fix.

2008-05-12  Dan Bernstein  <mitz@apple.com>

        Reviewed by Ada Chan.

        - WebKit/mac changes for https://bugs.webkit.org/show_bug.cgi?id=17097
          <rdar://problem/5715471> CGFontRefs (and HFONTs on Windows) leak because FontCache grows without bound

        Added font cache statistics and a function to purge inactive font data.

        * Misc/WebCoreStatistics.h:
        * Misc/WebCoreStatistics.mm:
        (+[WebCoreStatistics cachedFontDataCount]):
        (+[WebCoreStatistics cachedFontDataInactiveCount]):
        (+[WebCoreStatistics purgeInactiveFontData]):
        (+[WebCoreStatistics glyphPageCount]):

2008-05-12  Mark Rowe  <mrowe@apple.com>

        Reviewed by Tim Hatcher.

        Decorate some deprecated delegate methods with the availability macros.

        The compiler doesn't appear to warn if a delegate implements these methods, but using the availability
        macros is good for consistency and documentation.

        * WebView/WebFrameLoadDelegate.h:
        * WebView/WebUIDelegate.h:

2008-05-12  Mark Rowe  <mrowe@apple.com>

        Reviewed by Tim Hatcher.

        <rdar://problem/5835604> Deprecate HIWebView

        Use of HIWebView is deprecated in favor of embedding a WebView in a HICocoaView.

        * Carbon/CarbonUtils.h: Include the availability macro header and decorate the functions appropriately.
        * Carbon/HIWebView.h: Ditto.

2008-05-12  Kevin Decker  <kdecker@apple.com>

        Reviewed by Anders.

        Fixed: <rdar://problem/5840884>_recursive_resumeNullEventsForAllNetscapePlugins and _pauseNullEvents not defined
        
        Re-added these SPI methods because they are needed by some clients. They were accidentally removed
        in changeset <http://trac.webkit.org/changeset/31028>
        
        * Plugins/WebBaseNetscapePluginView.h: Added stopTimers, restartTimers to the header.